# Capstone2

./: .env.example  app.py  main.py  pyproject.toml
sql/: seed.sql
src/api/v1/agents/: agent.py  agent_utils.py
src/api/v1/routes/: query.py  upload.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/core/: db.py
src/ingestion/: docling_parser.py  ingestion.py
src/retrieval/: fts_search.py  hybrid_search.py  vector_search.py
