[project]
name = "cap2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=6.1.0",
    "docling>=2.84.0",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.6",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
